src/objects/Eventstaff__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Attendee_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AttendeeCreate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ticket_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ticket Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ticket_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ticket Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ticket_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ticket Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ticket_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ticket Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Event staff</label>
</CustomObject>